--- a/trabajos/Hotofu.html
+++ b/trabajos/Hotofu.html
@@ -215,16 +215,12 @@
                 </a>
               </li>
               <li class="list-item-foot" style="background-color: #2797ff;">
-                <a href="https://www.linkedin.com/in/paula-lopez-611a8a2a0/" class="link-red-foot w-inline-block" style="color: var(--blanco-color); ">
+                <a href="https://www.linkedin.com/in/paula-lopez-611a8a2a0/" class="link-red-foot w-inline-block"
+                  style="color: var(--blanco-color); ">
                   <div class="nav-link-2" style="color: var(--blanco-color); ">LikedIn</div>
                 </a>
               </li>
-              <li class="list-item-foot" style="background-color: var(--negro-color);">
-                <a href="#" class="link-red-foot w-inline-block" style="color: var(--blanco-color);
-                      ">
-                  <div class="nav-link-2" style="color: var(--blanco-color);">Resumen</div>
-                </a>
-              </li>
+           
             </ul>
           </div>
         </div>
@@ -239,6 +235,7 @@
         </div>
       </div>
     </div>
+  
   </div>
   <div data-w-id="a414070e-b140-4f19-2e35-8b4ae9b1250d" class="botonup">
     <a href="#arriba" class="button-3 w-button">↑</a>
