--- a/trabajos/twitch2021.html
+++ b/trabajos/twitch2021.html
@@ -185,7 +185,7 @@
     <div class="footer">
       <div class="waves---main-container w-container">
         <div class="waves-top-footer-1">
-
+  
           <div class="waves-top-right-footer-1">
             <h1 class="heading">Ficha mis otros lugares</h1>
             <ul role="list" class="redesfood w-list-unstyled">
@@ -197,21 +197,18 @@
               </li>
               <li class="list-item-foot"
                 style="background: linear-gradient(258deg, #7000FF 8.2%, #C0F 38.15%, #FFC700 74.47%, #FFE500 95.28%);">
-                <a href="https://www.instagram.com/depeapau" class="link-red-foot w-inline-block" style="color: var(--blanco-color);">
+                <a href="https://www.instagram.com/depeapau" class="link-red-foot w-inline-block"
+                  style="color: var(--blanco-color);">
                   <div class="nav-link-2" style="color: var(--blanco-color);">Instagram</div>
                 </a>
               </li>
               <li class="list-item-foot" style="background-color: #2797ff;">
-                <a href="#" class="link-red-foot w-inline-block" style="color: var(--blanco-color); ">
+                <a href="https://www.linkedin.com/in/paula-lopez-611a8a2a0/" class="link-red-foot w-inline-block"
+                  style="color: var(--blanco-color); ">
                   <div class="nav-link-2" style="color: var(--blanco-color); ">LikedIn</div>
                 </a>
               </li>
-              <li class="list-item-foot" style="background-color: var(--negro-color);">
-                <a href="#" class="link-red-foot w-inline-block" style="color: var(--blanco-color);
-                ">
-                  <div class="nav-link-2" style="color: var(--blanco-color);">Resumen</div>
-                </a>
-              </li>
+           
             </ul>
           </div>
         </div>
@@ -226,6 +223,7 @@
         </div>
       </div>
     </div>
+  
   </div>
   <div data-w-id="a414070e-b140-4f19-2e35-8b4ae9b1250d" class="botonup">
     <a href="#arriba" class="button-3 w-button">↑</a>
