--- a/trabajos.html
+++ b/trabajos.html
@@ -517,7 +517,7 @@
                     <div class="tarjdeescrip">
                       <div class="property-size property-company">
                         <div class="textotarjetas" style="color: var(--negro-color)">
-                          Serie de fotografias de anillos y collares con estilo atrevido y vanguardista.
+                         Revista colaborativa de la easda con entrevistas, juegos y colaboraciones junto a los alumnos. 
                         </div>
                       </div>
                     </div>
